[Styling] Beautify color-chooser button
+ make it respond quicker by not waiting for the http request with updating the color

--- a/css/index.css
+++ b/css/index.css
@@ -2,9 +2,17 @@
   position: relative;
   border-left: 4px solid transparent;
 }
+
 .Presence__User input[type=color] {
-  width:1cm;
-  position:absolute;
-  right: 0;
-  top: .05cm;
+  /*Meet: The iNViSibLe hACk*/
+  position: absolute;
+  left:-9999px; top:-9999px;
+}
+.Presence__User button {
+  float: right;
+}
+.Presence__User:after {
+  /*clearfix*/
+  display: table;
+  content: ' ';
 }
